2006-12-25  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/installer.rb (Gem::Installer#app_script_text):
	Simpler, more readable bin script.
	* lib/rubygems/gem_commands.rb (Gem::PristineCommand#execute):
	Regenerate bin scripts.  This will clean up require_gem in scripts.

2006-12-24  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/remote_fetcher.rb (Gem::RemoteFetcher#fetch_path):
	Rescue various errors and return a more-friendly error.

2006-12-23  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/command.rb lib/rubygems/gem_commands.rb: Make help
	output fit in 80 columns.
	* lib/rubygems/rubygems_version.rb: Bump version to 0.9.0.8, beta
	time!  (Oops, didn't go into beta.)

2006-12-20  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/remote_fetcher.rb (Gem::RemoteFetcher#fetch_size): Give
	a sensible error on bad URIs.
	* lib/rubygems/gem_commands.rb (Gem::SourceCommand): Allow management
	of sources in source_cache.  Fixes bug #1128.
	* lib/rubygems.rb (Kernel#require_gem): Add deprecation warning in
	favor of gem.

2006-12-19  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/installer.rb (Gem::ExtBuilder): Refactored for
	uniformity.
	* lib/rubygems/remote_installer.rb
	(Gem::RemoteInstaller#specs_n_sources_matching): Don't display gems
	that can't be installed.
	* lib/rubygems.rb, pre-install.rb: Fix installation errors on 1.9.
	Fixes bug #4536 by Ryan Davis.
	* lib/rubygems/source_index.rb, lib/rubygems/gem_commands.rb,
	lib/rubygems-custom_require.rb: Use File.join with glob strings.
	Fixes bug #1096 submitted by Chad Fowler.
	* lib/rubygems/remote_installer.rb
	(Gem::RemoteInstaller#install_dependencies): Make --force actually
	force.  Fixes bug #7365 by Robert James.

2006-12-18  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/gem_commands (Gem::OutdatedCommand): Add a way to see
	which gems are out-of-date.

	* setup.rb: Ignore errors for .config and InstalledFiles when